# cargo-features = ["edition2021"]

[package]
name = "lunabank"
version = "0.1.0"
edition = "2021"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.9.5"
borsh = "0.9.3"
thiserror = "1.0.30"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
mpl-token-metadata = {version = "1.2.4", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]
